tests/scan/fixtures/validation/negative/clean_go_clean-config-reader/go.mod
module github.com/example/clean-config-reader
go 1.21
